# ML-Ads-Ranking-System

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
artifacts/: .gitkeep
data/: .gitkeep
deploy/postgres/: init.sql
docs/: api.md  architecture.md
ml/: Dockerfile  README.md  pyproject.toml
ml/scripts/: export_test_fixture.py
ml/src/ads_ml/: __init__.py  cli.py  config.py  data.py  export.py  features.py  model.py  schema.py
ml/tests/: test_data.py  test_features.py  test_model_export.py
ranking/: .dockerignore  Dockerfile  README.md  go.mod
ranking/cmd/server/: main.go
ranking/internal/api/: api_test.go  handlers.go  middleware.go  response.go  router.go
ranking/internal/cache/: cache.go  memory.go  memory_test.go  redis.go
ranking/internal/config/: config.go  config_test.go
ranking/internal/features/: features.go  features_test.go
ranking/internal/features/testdata/: feature_spec.json
ranking/internal/logging/: logging.go
ranking/internal/model/: model.go  model_test.go
ranking/internal/model/testdata/: model.json  parity_samples.json
ranking/internal/ranking/: ranking.go  ranking_test.go
ranking/internal/store/: memory.go  postgres.go  sample.go  store.go
